@@ -1,5 +1,5 @@
 /*
- * "$Id: image.cxx,v 1.11.2.20 2002/07/25 21:29:25 mike Exp $"
+ * "$Id: image.cxx,v 1.11.2.21 2002/07/26 16:07:13 mike Exp $"
  *
  *   Image handling routines for HTMLDOC, a HTML document processing program.
  *
@@ -794,7 +794,7 @@ image_load(const char *filename,/* I - Name of image file */
 
   puts("\"\n");
 
-  printf(("match = %p\n", match);
+  printf("match = %p\n", match);
 #endif // DEBUG
 
   rewind(fp);
@@ -1713,5 +1713,5 @@ read_long(FILE *fp)               /* I - File to read from */
 
 
 /*
- * End of "$Id: image.cxx,v 1.11.2.20 2002/07/25 21:29:25 mike Exp $".
+ * End of "$Id: image.cxx,v 1.11.2.21 2002/07/26 16:07:13 mike Exp $".
  */
